crates/logic/src/compile/projections/snapshots/canonical-rdf12@confidence-scoped-axiom.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: rdf_snapshot(&arts.canonical_rdf12)
---
<https://blackcatinformatics.ca/gmeow/logic/gmeow.logic.rdf12> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Ontology>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#object> <https://example.org/confidence-scoped-axiom/Organism>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#predicate> <https://blackcatinformatics.ca/logic/subClassOf>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#subject> <https://example.org/confidence-scoped-axiom/Animal>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/1999/02/22-rdf-syntax-ns#Statement>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <https://blackcatinformatics.ca/logic/confidence> "0.9"^^<http://www.w3.org/2001/XMLSchema#decimal>
<https://blackcatinformatics.ca/logic/reifier/f44a2808a7f0> <https://blackcatinformatics.ca/logic/modality> <https://blackcatinformatics.ca/logic/epistemic>
<https://example.org/confidence-scoped-axiom/Animal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/Kind>
<https://example.org/confidence-scoped-axiom/Animal> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/confidence-scoped-axiom/Organism>
<https://example.org/confidence-scoped-axiom/Bird> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/SubKind>
<https://example.org/confidence-scoped-axiom/Bird> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/confidence-scoped-axiom/Animal>
<https://example.org/confidence-scoped-axiom/Organism> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/logic/Kind>
<https://example.org/confidence-scoped-axiom/stmt1> <https://blackcatinformatics.ca/logic/confidence> "0.9"
<https://example.org/confidence-scoped-axiom/stmt1> <https://blackcatinformatics.ca/logic/modality> <https://blackcatinformatics.ca/logic/epistemic>
