crates/logic/src/compile/projections/snapshots/n3@confidence-scoped-axiom.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.n3
---
@prefix logic: <https://blackcatinformatics.ca/logic/> .
@prefix gmeow: <https://blackcatinformatics.ca/gmeow/> .
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix owl: <http://www.w3.org/2002/07/owl#> .
@prefix log: <http://www.w3.org/2000/10/swap/log#> .

# GENERATED by `gmeow logic compile` — DO NOT EDIT.
# N3 projection of the canonical logic: program.

# === Axioms ===
<https://example.org/confidence-scoped-axiom/Animal> a <https://blackcatinformatics.ca/logic/Kind> .
# modal context: epistemic
{ <https://example.org/confidence-scoped-axiom/Animal> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/confidence-scoped-axiom/Organism> } log:implies { <https://example.org/confidence-scoped-axiom/Animal> <https://blackcatinformatics.ca/logic/holds> <https://example.org/confidence-scoped-axiom/Organism> } .
<https://example.org/confidence-scoped-axiom/Bird> a <https://blackcatinformatics.ca/logic/SubKind> .
<https://example.org/confidence-scoped-axiom/Bird> <https://blackcatinformatics.ca/logic/subClassOf> <https://example.org/confidence-scoped-axiom/Animal> .
<https://example.org/confidence-scoped-axiom/Organism> a <https://blackcatinformatics.ca/logic/Kind> .
<https://example.org/confidence-scoped-axiom/stmt1> <https://blackcatinformatics.ca/logic/confidence> '0.9' .
<https://example.org/confidence-scoped-axiom/stmt1> <https://blackcatinformatics.ca/logic/modality> <https://blackcatinformatics.ca/logic/epistemic> .

# === Rules ===
