crates/logic/src/compile/projections/snapshots/nemo@kind-hierarchy.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.nemo
---
% GENERATED by `gmeow logic compile` — DO NOT EDIT.
% Nemo (.rls) projection of the canonical logic: program.

% === Ground facts (axioms) ===
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/kind-hierarchy/Animal>, <https://blackcatinformatics.ca/logic/Kind>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/kind-hierarchy/Dog>, <https://blackcatinformatics.ca/logic/SubKind>, "default").
<https://blackcatinformatics.ca/logic/subClassOf>(<https://example.org/kind-hierarchy/Dog>, <https://example.org/kind-hierarchy/Mammal>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/kind-hierarchy/Mammal>, <https://blackcatinformatics.ca/logic/SubKind>, "default").
<https://blackcatinformatics.ca/logic/subClassOf>(<https://example.org/kind-hierarchy/Mammal>, <https://example.org/kind-hierarchy/Animal>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/kind-hierarchy/Pet>, <https://blackcatinformatics.ca/logic/Role>, "default").
<https://blackcatinformatics.ca/logic/subClassOf>(<https://example.org/kind-hierarchy/Pet>, <https://example.org/kind-hierarchy/Animal>, "default").

% === Rules ===
