crates/logic/src/compile/projections/snapshots/nemo@relator-mediation.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: arts.nemo
---
% GENERATED by `gmeow logic compile` — DO NOT EDIT.
% Nemo (.rls) projection of the canonical logic: program.

% === Ground facts (axioms) ===
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/relator-mediation/Employment>, <https://blackcatinformatics.ca/logic/Relator>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/relator-mediation/Organization>, <https://blackcatinformatics.ca/logic/Kind>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/relator-mediation/Person>, <https://blackcatinformatics.ca/logic/Kind>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/relator-mediation/employedBy>, <https://blackcatinformatics.ca/logic/Role>, "default").
<https://blackcatinformatics.ca/logic/domain>(<https://example.org/relator-mediation/employedBy>, <https://example.org/relator-mediation/Employment>, "default").
<https://blackcatinformatics.ca/logic/range>(<https://example.org/relator-mediation/employedBy>, <https://example.org/relator-mediation/Organization>, "default").
<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>(<https://example.org/relator-mediation/employs>, <https://blackcatinformatics.ca/logic/Role>, "default").
<https://blackcatinformatics.ca/logic/domain>(<https://example.org/relator-mediation/employs>, <https://example.org/relator-mediation/Employment>, "default").
<https://blackcatinformatics.ca/logic/inverseOf>(<https://example.org/relator-mediation/employs>, <https://example.org/relator-mediation/employedBy>, "default").
<https://blackcatinformatics.ca/logic/range>(<https://example.org/relator-mediation/employs>, <https://example.org/relator-mediation/Person>, "default").

% === Rules ===
