crates/logic/src/compile/projections/snapshots/owl-dl@relator-mediation.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: rdf_snapshot(&arts.owl_dl)
---
<https://blackcatinformatics.ca/gmeow/owl/gmeow-dl> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Ontology>
<https://example.org/relator-mediation/Employment> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Relator>
<https://example.org/relator-mediation/Employment> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/relator-mediation/Organization> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Kind>
<https://example.org/relator-mediation/Organization> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/relator-mediation/Person> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Kind>
<https://example.org/relator-mediation/Person> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/relator-mediation/employedBy> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Role>
<https://example.org/relator-mediation/employedBy> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/relator-mediation/employedBy> <http://www.w3.org/2000/01/rdf-schema#domain> <https://example.org/relator-mediation/Employment>
<https://example.org/relator-mediation/employedBy> <http://www.w3.org/2000/01/rdf-schema#range> <https://example.org/relator-mediation/Organization>
<https://example.org/relator-mediation/employs> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Role>
<https://example.org/relator-mediation/employs> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/relator-mediation/employs> <http://www.w3.org/2000/01/rdf-schema#domain> <https://example.org/relator-mediation/Employment>
<https://example.org/relator-mediation/employs> <http://www.w3.org/2000/01/rdf-schema#range> <https://example.org/relator-mediation/Person>
<https://example.org/relator-mediation/employs> <http://www.w3.org/2002/07/owl#inverseOf> <https://example.org/relator-mediation/employedBy>
