crates/logic/src/compile/projections/snapshots/owl-el@kind-hierarchy.snap
---
source: crates/logic/src/compile/projections/tests.rs
expression: rdf_snapshot(&arts.owl_el)
---
<https://blackcatinformatics.ca/gmeow/owl/gmeow-el> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Ontology>
<https://example.org/kind-hierarchy/Animal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Kind>
<https://example.org/kind-hierarchy/Animal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/kind-hierarchy/Dog> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#SubKind>
<https://example.org/kind-hierarchy/Dog> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/kind-hierarchy/Dog> <http://www.w3.org/2000/01/rdf-schema#subClassOf> <https://example.org/kind-hierarchy/Mammal>
<https://example.org/kind-hierarchy/Mammal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#SubKind>
<https://example.org/kind-hierarchy/Mammal> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/kind-hierarchy/Mammal> <http://www.w3.org/2000/01/rdf-schema#subClassOf> <https://example.org/kind-hierarchy/Animal>
<https://example.org/kind-hierarchy/Pet> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://purl.org/nemo/gufo#Role>
<https://example.org/kind-hierarchy/Pet> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www.w3.org/2002/07/owl#Class>
<https://example.org/kind-hierarchy/Pet> <http://www.w3.org/2000/01/rdf-schema#subClassOf> <https://example.org/kind-hierarchy/Animal>
